# ai-langchain-boilerplate

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: README.md  example-embedded-api-server.py
examples/config/: app_config.yaml  mock_api_tools.yaml
src/: __init__.py  cli.py
src/ai_langchain_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/config/: config_loader.py
src/interfaces/: pubsub.py  tool_registry.py  tool_source.py
src/services/: langchain_agent.py  langchain_tool_loader.py  tool_registry.py
src/tools/: file_tool_source.py  tool_source.py  yaml_tool_source.py
